doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ 3.1.7/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/EliasLip/BioBook/mysql.jar:/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/EliasLip/OneDrive/BioBook
-d
/Users/EliasLip/OneDrive/BioBook/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/EliasLip/OneDrive/BioBook/CreateCustomerFrame.java
<---- end of javadoc command ---->
Loading source file /Users/EliasLip/OneDrive/BioBook/CreateCustomerFrame.java...
/Users/EliasLip/OneDrive/BioBook/CreateCustomerFrame.java:30: error: ')' expected
        JLabel nameLabel = new JLabel ("Name :" ;
                                               ^
1 error
